--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,23 @@
 = gRPG
 
 An RPG game built by using gRPC services
+
+== How to build
+
+Run the following commands from the root of the project to build and test the dice server:
+
+[source, bash]
+----
+mvn clean package <1>
+
+java -jar target/dice-0.1.0.jar <2>
+
+grpcurl -import-path src/main/proto -proto dice.proto -plaintext -d '{"ask": "Throw dice"}' localhost:8980 dice.ThrowDiceService/ThrowDice <3>
+----
+<1> Build the jar with dependencias and the gRPC classes needed for the server to run
+<2> Run the server
+<3> Test the server with grpcurl
+
+IMPORTANT: The string for asking the value has to be: "Throw dice". If not, it won't return a value.
+
+NOTE: If you want to change the port where the gRPC service is listening. You can change the `DICE_PORT` constant in `src/main/java/io/grpg/dice/Constants.java`
